# spotify-hit-song-prediction

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
data/: spotify_enriched.csv
hit_song_project/: README.md
hit_song_project/results/: model_output.txt
hit_song_project/src/: hit_song.py  spotify_query.py
results/: summary.md
src/: hit_song.py  spotify_query.py
tests/: test_project.py
